--- a/scss/main.css
+++ b/scss/main.css
@@ -11979,4 +11979,23 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+main {
+  margin-bottom: 250px; /* Height of the footer */
+}
+
+footer.footer {
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+footer a {
+  color: white;
 }/*# sourceMappingURL=main.css.map */
