--- a/scss/main.css
+++ b/scss/main.css
@@ -11998,4 +11998,35 @@ footer.footer {
 
 footer a {
   color: white;
+}
+
+p {
+  font-family: "Hind Madurai", serif;
+  font-size: 18px;
+}
+
+.hero-scene {
+  position: relative;
+}
+.hero-scene::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/FondHeroScene.jpg);
+  background-position: bottom;
+  background-size: cover;
+  filter: brightness(0.3);
+}
+.hero-scene * {
+  position: relative;
+}
+.hero-scene .hero-scene-content {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=main.css.map */
