--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,3 +20,37 @@ footer.footer {
 footer a {
   color: white;
 }
+
+p {
+  font-family: $font-family-serif;
+  font-size: 18px;
+}
+
+.hero-scene {
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/FondHeroScene.jpg);
+    background-position: bottom;
+    background-size: cover;
+    filter: brightness(0.3);
+  }
+
+  * {
+    //Positionner les éléments devant le ::before
+    position: relative;
+  }
+
+  .hero-scene-content {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
