--- a/scss/main.css
+++ b/scss/main.css
@@ -12054,4 +12054,13 @@ p {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+
+.tab-pane h3, .tab-pane .h3 {
+  color: #906427;
+  margin-top: 1rem;
+}
+
+.tab-pane i {
+  color: #198754;
 }/*# sourceMappingURL=main.css.map */
