--- a/scss/main.css
+++ b/scss/main.css
@@ -11986,7 +11986,7 @@ html {
 }
 
 main {
-  margin-bottom: 250px; /* Height of the footer */
+  margin-bottom: 270px; /* Height of the footer */
 }
 
 footer.footer {
@@ -12007,6 +12007,7 @@ p {
 
 .hero-scene {
   position: relative;
+  margin-bottom: 15px;
 }
 .hero-scene::before {
   content: "";
@@ -12067,4 +12068,8 @@ p {
 
 td {
   padding: 0.6rem;
+}
+
+.form-label {
+  color: #906427;
 }/*# sourceMappingURL=main.css.map */
