--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 main {
-  margin-bottom: 250px; /* Height of the footer */
+  margin-bottom: 270px; /* Height of the footer */
 }
 
 footer.footer {
@@ -28,6 +28,7 @@ p {
 
 .hero-scene {
   position: relative;
+  margin-bottom: 15px;
   &::before {
     content: "";
     position: absolute;
@@ -95,4 +96,8 @@ p {
 
 td {
   padding: 0.6rem;
+}
+
+.form-label {
+  color: $primary;
 }
