--- a/scss/main.css
+++ b/scss/main.css
@@ -12084,4 +12084,10 @@ td {
 
 .form-label {
   color: #906427;
+}
+
+.allreservations a {
+  display: block;
+  color: #292222;
+  padding: 10px;
 }/*# sourceMappingURL=main.css.map */
