--- a/scss/main.scss
+++ b/scss/main.scss
@@ -113,3 +113,11 @@ td {
 .form-label {
   color: $primary;
 }
+
+.allreservations {
+  a {
+    display: block;
+    color: $black;
+    padding: 10px;
+  }
+}
