--- a/scss/main.css
+++ b/scss/main.css
@@ -12074,7 +12074,7 @@ p {
   margin-top: 1rem;
 }
 
-.tab-pane i {
+.bi-leaf-fill {
   color: #198754;
 }
 
@@ -12090,4 +12090,30 @@ td {
   display: block;
   color: #292222;
   padding: 10px;
+}
+
+.menu-card {
+  position: relative;
+}
+.menu-card:hover .action-menu-buttons {
+  opacity: 1;
+}
+.menu-card .action-menu-buttons {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  padding: 5px;
+  gap: 10px;
+  display: flex;
+  justify-content: flex-end;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.modal-title {
+  text-align: center;
+}
+
+.input-group-text {
+  gap: 10px;
 }/*# sourceMappingURL=main.css.map */
